<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_movies"
        android:icon="@android:drawable/ic_menu_slideshow"
        android:title="@string/nav_movies" />
    <item
        android:id="@+id/nav_categories"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_categories" />
    <item
        android:id="@+id/nav_users"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_users" />
    <item
        android:id="@+id/nav_send_notification"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/nav_send_notification" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/nav_logout" />
</menu>
